CI: Let fiat-cryto rebuild a part of coqprime
fiat-crypto only depends on a small subset of coqprime, and does not depend
on bignums, so overall build latency is reduced by duplicating coqprime.
The cost of this trade is about 15s of CI time.

--- a/Makefile.ci
+++ b/Makefile.ci
@@ -99,7 +99,7 @@ ci-corn: ci-math_classes
 
 ci-mtac2: ci-unicoq
 
-ci-fiat_crypto: ci-coqprime ci-rewriter
+ci-fiat_crypto: ci-rewriter
 ci-fiat_crypto_ocaml: ci-fiat_crypto
 
 ci-fourcolor: ci-mathcomp
